Bug 73860 - FILEOPEN: Space characters missing in PPTX file (4.2 specific)
Summary: FILEOPEN: Space characters missing in PPTX file (4.2 specific)
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
4.2.0.0.alpha0+ Master
Hardware: All All
: highest major
Assignee: Muthu
URL:
Whiteboard: target:4.2.3
Keywords: regression
: 70415 (view as bug list)
Depends on:
Blocks: mab4.2
  Show dependency treegraph
 
Reported: 2014-01-21 03:03 UTC by David Filiatrault
Modified: 2014-04-14 10:17 UTC (History)
9 users (show)

See Also:
Crash report or crash signature:


Attachments
3 words in 1 slide reproducing the problem (227.95 KB, application/vnd.openxmlformats-officedocument.presentation)
2014-01-21 03:03 UTC, David Filiatrault
Details
Is there the bug here? (17.80 KB, image/png)
2014-03-19 19:49 UTC, ape
Details
I am sorry.. (143.10 KB, image/png)
2014-03-19 19:55 UTC, ape
Details

Note You need to log in before you can comment on or make changes to this bug.
Description David Filiatrault 2014-01-21 03:03:37 UTC
Created attachment 92500 [details]
3 words in 1 slide reproducing the problem

The spaces between the words "AFFORDABLE HEALTH CARE" got dropped during the loading of a .pptx file(attached).  When Keynote loaded the same file, it reported the following  yet displayed the spaces as expected.  "The font 45 Helvetica Light isn't available on OS X. It was replaced with Helvetica.  The font Calibri Light isn't available on OS X.  It was replaced with Calibri-Light." 

Steps to reproduce:
1. Open the file in LibreOffice

Current behavior:
Observe slide as "AFFORDABLEHEALTHCARE"

Expected behavior:
Observe slide as "AFFORDABLE HEALTH CARE"
Comment 1 Mihkel Tõnnov 2014-01-27 17:13:06 UTC
Same here on Linux (32-bit). Setting platform to all.
Comment 2 Andras Timar 2014-01-27 19:57:57 UTC
I don't see it in master, only in 4.2.
Comment 3 Maxim Monastirsky 2014-01-27 21:45:05 UTC
It's a duplicate of Bug 70415, but since it's already in mab I'll mark the latter as a duplicate of this.
Comment 4 Maxim Monastirsky 2014-01-27 21:45:28 UTC
*** Bug 70415 has been marked as a duplicate of this bug. ***
Comment 5 Björn Michaelsen 2014-02-12 11:41:50 UTC
Setting MAB priority.
Comment 6 Commit Notification 2014-02-13 16:00:24 UTC
Muthu Subramanian committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=4334044106af01290d649ac788a89b81e8a75029&h=libreoffice-4-2

fdo#73860 n#828390: New line is dropped while importing text.


It will be available in LibreOffice 4.2.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Mihkel Tõnnov 2014-02-13 16:30:22 UTC
Any chance of getting this for 4.2.1, already? :)
Comment 8 Jean-Baptiste Faure 2014-02-13 19:43:05 UTC
Hi Muthu,
I am sorry but your commit breaks the 4.2.2.0.0+ build :

[build LNK] CppunitTest/libtest_chart2_import.so
diff.cxx:257:Assertion
Test name: SdFiltersTest::testDocumentLayout
assertion failed
- Expression: xmlStrEqual(expected, found)
- Reference: /home/jbf/LibO/lo42/sd/qa/unit/data/xml/n819614_0.xml
- Expected: A
- Found: A 

Failures !!!
Run: 7   Failure total: 1   Failures: 1   Errors: 0

Best regards. JBF
Comment 9 Jean-Baptiste Faure 2014-02-14 05:46:11 UTC
The commit https://gerrit.libreoffice.org/gitweb?p=core.git;a=commit;h=9ee8df7b702a7d4b0f679d18deda30fbbad27f50 fixed the build problem.
Thank you very much Muthu for the quick fix :-)

Now testing the fix in LO 4.2.2.0.0+, I can confirm that it fixes the bug. Marking as Resolved/Fixed again.

Best regards. JBF
Comment 10 Mihkel Tõnnov 2014-02-27 22:54:12 UTC
Bug remains on my installation of 4.2.2 rc1, both with test document given above and my own files. Reopening.

Strangely enough, it was better in 4.2.1 rc1, where the spaces only went missing after non-letter symbols or before/after changing text attributes (i.e. before/after italicized word, etc.).
Comment 11 V Stuart Foote 2014-02-27 23:28:58 UTC
(In reply to comment #10)
> Strangely enough, it was better in 4.2.1 rc1, where the spaces only went
> missing after non-letter symbols or before/after changing text attributes
> (i.e. before/after italicized word, etc.).

On Windows 7 sp1, 64-bit with today's release
Version: 4.2.2.1
Build ID: 3be8cda0bddd8e430d8cda1ebfd581265cca5a0f

Confirm that spaces are being physically removed during the filter import of the .pptx 92500 sample.  If I make a copy of the presentation, open it in Office 2013 Powerpoint and remove the bullet style and save, the text then opens correctly with Impress. So issue lays somewhere in the parsing of XML for the styling of bullets and text attributes.
Comment 12 ape 2014-03-19 19:49:56 UTC
Created attachment 96068 [details]
Is there the bug here?

It seems to me that the file reveals other bug 66894 - press "Insert Chart".
Comment 13 ape 2014-03-19 19:55:24 UTC
Created attachment 96069 [details]
I am sorry..
Comment 14 Muthu 2014-03-20 09:33:07 UTC
I am confused. Is the bug fixed in the recent builds or still there?
Comment 15 ape 2014-03-20 14:14:46 UTC
Error in the mab4.2 still.
Comment 16 Andras Timar 2014-04-14 10:17:01 UTC
I verified the fix in 4.2.3.