fdo#73860 n#828390: New line is dropped while importing text.

(cherry picked from commit 840f4fc4d677740fc4b0ebcb658f4a828e184dad)
Signed-off-by: David Tardon <dtardon@redhat.com>

Change-Id: Id36181f64bd154d271446ef27a124a81af5c8620