include/oox/core/contexthandler2.hxx
@@ -206,6 +206,8 @@ private:
 
     ContextStackRef     mxContextStack;     ///< Stack of all processed elements.
     size_t              mnRootStackSize;    ///< Stack size on construction time.
+
+protected:
     bool                mbEnableTrimSpace;  ///< True = trim whitespace in characters().
 };
 
